--- a/vercel.json
+++ b/vercel.json
@@ -3,14 +3,15 @@
     "installCommand": "yarn install",
     "buildCommand": "turbo run build --filter=auth...",
     "outputDirectory": "apps/microservices/auth/dist",
-    "functions": {
-        "api/index.js": {
-            "runtime": "vercel-node@3.0.0"
+    "builds": [
+        {
+            "src": "apps/microservices/auth/dist/main.js",
+            "use": "@vercel/node"
         }
-    },
+    ],
     "routes": [
         {
-            "src": "/(.*)",
+            "src": "/api/(.*)",
             "dest": "apps/microservices/auth/dist/main.js"
         }
     ]
