--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "husky": "^9.1.6",
     "prettier": "^3.2.5",
     "turbo": "^2.1.3",
-    "typescript": "^5.4.5"
+    "typescript": "5.5.4"
   },
   "packageManager": "yarn@1.22.22",
   "engines": {
-    "node": "22.x"
+    "node": ">=18"
   }
 }
